# COMP20023-DNS-Server

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  makefile  message_handler.c  message_handler.h  my_dns_server_behaviour.c  my_dns_server_behaviour.h  my_response_handler.c  my_response_handler.h  network_handler.c  network_handler.h  phase1.c  test_sender.c  utils.c  utils.h
